--- a/pgy.html
+++ b/pgy.html
@@ -105,7 +105,7 @@
             <div class="spinner">
                 <div id="showtext">正在下载，请在浏览器中查看下载进度</div>
                 <div class="loading"></div>
-                                                            <a href="javascript:void(0);" onclick="javascript:install_loading();" id="down_load" class="btn-u btn-u-lg  ">
+                                                            <a href="https://dl.hz.37.com.cn/upload/1_1002822_10664/shikongzhiyiH5_10664.apk" onclick="" id="down_load" class="btn-u btn-u-lg  ">
                             <img src="https://static.pgyer.com/static-20190311/images/dl.png" class="hide">
                              点击安装                        </a>
                                                 </div>
