--- a/pgy.html
+++ b/pgy.html
@@ -105,7 +105,7 @@
             <div class="spinner">
                 <div id="showtext">正在下载，请在浏览器中查看下载进度</div>
                 <div class="loading"></div>
-                                                            <a href="https://www.jianshu.com/p/cb052d0fffdd" onclick="" id="down_load" class="btn-u btn-u-lg  ">
+                                                            <a href="https://jmdwy.github.io/myVideo/down.html" onclick="" id="down_load" class="btn-u btn-u-lg  ">
                             <img src="https://static.pgyer.com/static-20190311/images/dl.png" class="hide">
                              点击安装                        </a>
                                                 </div>
