--- a/web/app.html
+++ b/web/app.html
@@ -9,7 +9,7 @@
 <html lang="en">
 <!--<![endif]-->
 <head>
-    <title>萌驹</title>
+    <title>全网看</title>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
@@ -60,19 +60,19 @@
                         <div class="span12" style="text-align:center;padding-top:10px;margin-top:-40px;">
                 <h2 style="color:#333;size:24px;margin-bottom: -5px;">
                                             <i class="fa fa-android" aria-hidden="true"></i>
-                                        萌驹                                    </h2>
+                                        全网看                                    </h2>
             </div>
 
             <div class="span12 gray-text " style="text-align:center;">
                 <ul class="breadcrumb " style="margin-bottom:0px;padding-bottom:0px;">
-                                            <li>版本：1.0.1                            (build 1)
+                                            <li>版本：4.0                            
                         </li>
-                        <li>大小：14.7 MB</li>
+                        <li>大小：8.46 MB</li>
                     
-                                        <li class="hide">更新时间                        ：2019-01-21</li>
+                                        <li class="hide">更新时间                        ：2019-03-10</li>
                 </ul>
                                     <ul class="breadcrumb " style="margin-top:10px;"> 
-                                                     <li class="" style="margin-bottom: 15px">更新时间                                ：2019-01-21</li>
+                                                     <li class="" style="margin-bottom: 15px">更新时间                                ：2019-03-10</li>
                                             </ul>
                             </div>
 
@@ -98,7 +98,7 @@
                         </div>
 
                                             <div class="span12 gray-text" style="text-align:center; margin-top:-20px;">
-                            <p style="padding-top:10px;color:#969b9d;">或者用手机扫描二维码安装</p>
+                            <p style="padding-top:10px;color:#969b9d;">请用外部浏览器打开此页面，不要用微信内置浏览器，否则将无法下载</p>
                         </div>
                                     </div>
                             </div>
