--- a/web/蒲公英原版.html
+++ b/web/蒲公英原版.html
@@ -4,17 +4,17 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
 <head>
-    <title>ÃÈ¾Ô</title>
+    <title>èŒé©¹</title>
         <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-        <meta name="keywords" content="ÆÑ¹«Ó¢,ÄÚ²â·Ö·¢ÍĞ¹Ü,pgyer,appÄÚ²â,appÍĞ¹Ü·Ö·¢,app²âÊÔ,iosÄÚ²â,androidÄÚ²â,beta test,Beta app,testflight,Ãâ·ÑÄÚ²â,appÏÂÔØ,ÄÚ²âSDK,udid»ñÈ¡£¬pgy,°²×¿ÄÚ²â,Æ»¹ûÄÚ²â,ÆóÒµÇ©Ãû,Æ»¹ûÆóÒµÇ©Ãû,appÆóÒµÇ©Ãû,ÆÑ¹«Ó¢ÆóÒµÇ©Ãû,iosÆóÒµÖ¤Êé£¬Æ»¹ûÆóÒµÖ¤Êé,ÆóÒµÖ¤ÊéÇ©Ãû,appleÆóÒµÇ©Ãû, iOSÆóÒµÇ©Ãû,iOS ÆóÒµÇ©Ãû,iOSÆóÒµÕËºÅ,iOS ÆóÒµÕËºÅ,appleÆóÒµÕËºÅ,apple ÆóÒµÕËºÅ,appleÆóÒµÖ¤Êé,apple ÆóÒµÖ¤Êé,Æ»¹ûÆóÒµÕËºÅ,iosÆóÒµ·Ö·¢,ios ÆóÒµ·Ö·¢,Æ»¹ûÆóÒµ·Ö·¢">
-    <meta name="description" content="ÆÑ¹«Ó¢appÄÚ²â·Ö·¢Æ½Ì¨(pgyer.com)Ìá¹©Ãâ·ÑµÄÆ»¹ûios|°²×¿androidÓ¦ÓÃappÄÚ²â·Ö·¢ÍĞ¹Ü|iosÆ»¹ûappÆóÒµÖ¤ÊéÇ©Ãû,¹¦ÄÜÇ¿´óµÄÄÚ²âSDK,ÊµÏÖÒ¡Ò»Ò¡Ìá½»·´À¡¡¢crash¡¢°æ±¾×Ô¶¯¸üĞÂµÈ¹¦ÄÜ£¬½â¾ö¿ª·¢ÕßappÄÚ²â·Ö·¢ÍĞ¹ÜÊ±·±ÔÓµÍĞ§µÄÎÊÌâ">
+        <meta name="keywords" content="è’²å…¬è‹±,å†…æµ‹åˆ†å‘æ‰˜ç®¡,pgyer,appå†…æµ‹,appæ‰˜ç®¡åˆ†å‘,appæµ‹è¯•,ioså†…æµ‹,androidå†…æµ‹,beta test,Beta app,testflight,å…è´¹å†…æµ‹,appä¸‹è½½,å†…æµ‹SDK,udidè·å–ï¼Œpgy,å®‰å“å†…æµ‹,è‹¹æœå†…æµ‹,ä¼ä¸šç­¾å,è‹¹æœä¼ä¸šç­¾å,appä¼ä¸šç­¾å,è’²å…¬è‹±ä¼ä¸šç­¾å,iosä¼ä¸šè¯ä¹¦ï¼Œè‹¹æœä¼ä¸šè¯ä¹¦,ä¼ä¸šè¯ä¹¦ç­¾å,appleä¼ä¸šç­¾å, iOSä¼ä¸šç­¾å,iOS ä¼ä¸šç­¾å,iOSä¼ä¸šè´¦å·,iOS ä¼ä¸šè´¦å·,appleä¼ä¸šè´¦å·,apple ä¼ä¸šè´¦å·,appleä¼ä¸šè¯ä¹¦,apple ä¼ä¸šè¯ä¹¦,è‹¹æœä¼ä¸šè´¦å·,iosä¼ä¸šåˆ†å‘,ios ä¼ä¸šåˆ†å‘,è‹¹æœä¼ä¸šåˆ†å‘">
+    <meta name="description" content="è’²å…¬è‹±appå†…æµ‹åˆ†å‘å¹³å°(pgyer.com)æä¾›å…è´¹çš„è‹¹æœios|å®‰å“androidåº”ç”¨appå†…æµ‹åˆ†å‘æ‰˜ç®¡|iosè‹¹æœappä¼ä¸šè¯ä¹¦ç­¾å,åŠŸèƒ½å¼ºå¤§çš„å†…æµ‹SDK,å®ç°æ‘‡ä¸€æ‘‡æäº¤åé¦ˆã€crashã€ç‰ˆæœ¬è‡ªåŠ¨æ›´æ–°ç­‰åŠŸèƒ½ï¼Œè§£å†³å¼€å‘è€…appå†…æµ‹åˆ†å‘æ‰˜ç®¡æ—¶ç¹æ‚ä½æ•ˆçš„é—®é¢˜">
     <meta property="og:type" content="webpage">
     <meta property="og:url" content="https://www.pgyer.com">
-    <meta property="og:title" content="ÆÑ¹«Ó¢">
-    <meta property="og:description" content="ÆÑ¹«Ó¢ Îª¿ª·¢ÕßÌá¹©¼ò½àÑ¸ËÙµÄÄÚ²â³ÌĞò·Ö·¢·şÎñ">
-    <meta name="apple-mobile-web-app-title" content="ÆÑ¹«Ó¢">
+    <meta property="og:title" content="è’²å…¬è‹±">
+    <meta property="og:description" content="è’²å…¬è‹± ä¸ºå¼€å‘è€…æä¾›ç®€æ´è¿…é€Ÿçš„å†…æµ‹ç¨‹åºåˆ†å‘æœåŠ¡">
+    <meta name="apple-mobile-web-app-title" content="è’²å…¬è‹±">
     
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -62,14 +62,14 @@
         </div>
                 <div class="span12" style="text-align:center;padding-top:10px;">
             <h2 style="color:#333;size:24px;margin-bottom: -5px;">
-            ÃÈ¾Ô                        </h2>
+            èŒé©¹                        </h2>
         </div>
 
         <div class="span12 gray-text" style="text-align:center;">
             <ul class="breadcrumb pb-20" >
-                            <li>°æ±¾£º1.0.1 (build 1)</li>
-                <li>´óĞ¡£º14.7 MB</li>
-                            <li >¸üĞÂÊ±¼ä£º2019-01-21</li>
+                            <li>ç‰ˆæœ¬ï¼š1.0.1 (build 1)</li>
+                <li>å¤§å°ï¼š14.7 MB</li>
+                            <li >æ›´æ–°æ—¶é—´ï¼š2019-01-21</li>
             </ul>
                     </div>
 
@@ -78,7 +78,7 @@
         <div id="" class="view row margin-bottom-30 col-md-6 col-md-offset-3" >    
         <div class="col-md-6 col-md-offset-3">
             <div class="span12 gray-text" style="text-align:center;">
-                <p style="padding-top:10px;color:#969b9d;">ÓÃÊÖ»úÉ¨Ãè¶şÎ¬Âë°²×°</p>
+                <p style="padding-top:10px;color:#969b9d;">ç”¨æ‰‹æœºæ‰«æäºŒç»´ç å®‰è£…</p>
             </div>
             <div class="span12 gray-text" style="text-align:center;">
                 <img src="https://www.pgyer.com/app/qrcode/mengju" class="qrcode-merge" />
@@ -91,9 +91,9 @@
 
                 <div class="span12 margin-bottom-20" style="text-align:center;display:none;">
            <div class="spinner">
-                <div id="showtext">ÕıÔÚÏÂÔØ£¬ÇëÔÚä¯ÀÀÆ÷ÖĞ²é¿´ÏÂÔØ½ø¶È</div>
+                <div id="showtext">æ­£åœ¨ä¸‹è½½ï¼Œè¯·åœ¨æµè§ˆå™¨ä¸­æŸ¥çœ‹ä¸‹è½½è¿›åº¦</div>
                 <div class="loading"></div>
-                <a href="javascript:void(0);" onclick="javascript:install_loading();" id="down_load"  class="btn-u btn-u-lg btn-u-green"><i class="fa fa-download"></i> µã»÷°²×°</a>
+                <a href="javascript:void(0);" onclick="javascript:install_loading();" id="down_load"  class="btn-u btn-u-lg btn-u-green"><i class="fa fa-download"></i> ç‚¹å‡»å®‰è£…</a>
            </div>
         </div>
         
@@ -118,12 +118,12 @@
                     <i class="fa fa-apple" aria-hidden="true" style="font-size:36px;color:#666d71;"></i>
                 </div>
                 <p style="color:#969b9d;">
-                                            <span style="padding-right:15px;">°æ±¾£º1.0.1 (build 1)</span>
-                        ´óĞ¡£º14.5 MB                                    </p>
+                                            <span style="padding-right:15px;">ç‰ˆæœ¬ï¼š1.0.1 (build 1)</span>
+                        å¤§å°ï¼š14.5 MB                                    </p>
                 <div class="margin-bottom-20 mt-40">
                                             <a href="javascript:void(0);"  onclick="javascript:install_merge_loading('ios');" id="down_load"  class="btn-u btn-u-lg " style="padding:8px 40px;">
                             <img src="https://static.pgyer.com/static-20190312/images/dl.png" class="hide">
-                            ÏÂÔØ iOS °æ                        </a>
+                            ä¸‹è½½ iOS ç‰ˆ                        </a>
                                     </div>
             </div>
         </div>
@@ -134,12 +134,12 @@
                 <i class="fa fa-android" aria-hidden="true" style="font-size:36px;color:#666d71;"></i>
                 </div>
                 <p style="color:#969b9d;">
-                    <span style="padding-right:15px;">°æ±¾£º1.0.1 (build 1)</span>
-                    ´óĞ¡£º14.7 MB                </p>
+                    <span style="padding-right:15px;">ç‰ˆæœ¬ï¼š1.0.1 (build 1)</span>
+                    å¤§å°ï¼š14.7 MB                </p>
                 <div class="margin-bottom-20 mt-40">
                     <a href="javascript:void(0);" onclick="javascript:install_merge_loading('android');" id="down_load"  class="btn-u btn-u-lg " style="padding:8px 24px;" >
                         <img src="https://static.pgyer.com/static-20190312/images/dl.png" class="hide">
-                        ÏÂÔØ Android °æ                    </a>
+                        ä¸‹è½½ Android ç‰ˆ                    </a>
                 </div>
             </div>
         </div>
@@ -165,12 +165,12 @@
     <div class="container" style="z-index:-1;">
         <div class="row">
             <div class="col-lg-8  col-xs-12 col-md-6 col-sm-6 text-left" style="z-index:0;">
-                                    <a href="/" target='_blank'>ÆÑ¹«Ó¢</a>£ü
-                                <a href="/about/disclaimer" target="_blank">ÃâÔğÉùÃ÷</a>£ü
-                <a data-toggle="modal" data-modal='reportAppModal' id="reportClick" style="cursor: pointer;">¾Ù±¨</a>
+                                    <a href="/" target='_blank'>è’²å…¬è‹±</a>ï½œ
+                                <a href="/about/disclaimer" target="_blank">å…è´£å£°æ˜</a>ï½œ
+                <a data-toggle="modal" data-modal='reportAppModal' id="reportClick" style="cursor: pointer;">ä¸¾æŠ¥</a>
             </div>
                         <div class="col-lg-4  col-xs-12 col-md-6 col-sm-6 text-right" style="z-index:0;">
-                <a href="/lang/select?l=cn&redi=https%3A%2F%2Fwww.pgyer.com%2Fmengju"><img src="https://static.pgyer.com/static-20190312/assets/img/language_chinese.png"> ÖĞÎÄ</a>
+                <a href="/lang/select?l=cn&redi=https%3A%2F%2Fwww.pgyer.com%2Fmengju"><img src="https://static.pgyer.com/static-20190312/assets/img/language_chinese.png"> ä¸­æ–‡</a>
                 &nbsp;&nbsp;&nbsp;<a href="/lang/select?l=en&redi=https%3A%2F%2Fwww.pgyer.com%2Fmengju"><img src="https://static.pgyer.com/static-20190312/assets/img/language_english.png"> English</a>
             </div>
                     </div><!--/row-fluid-->
@@ -187,7 +187,7 @@
     var userKey = "";
     const maxImageCount = '5';
     var feedbackImageCounter = 0;
-    const imageCountOutTips = '·´À¡½ØÍ¼×î¶à²»ÄÜ³¬¹ı5ÕÅ'
+    const imageCountOutTips = 'åé¦ˆæˆªå›¾æœ€å¤šä¸èƒ½è¶…è¿‡5å¼ '
 </script>
 <script type="text/javascript" src="https://static.pgyer.com/static-20190312/assets/build/app_view.min.js"></script>
 <script type="text/javascript" src="https://static.pgyer.com/static-20190312/assets/js/plugins/ua-parser.min.js"></script>
@@ -233,13 +233,13 @@ var aType = 'android',
     aKey = '79083847d931768d07e3dce68a17b62a',
     agKey = 'aae17808807bc6b1449b4bef3a620d0b',
     isMergeApp = '',
-    submiting = 'ÇëÉÔºò...',
-    submitText = 'Á¢¼´½øÈë',
+    submiting = 'è¯·ç¨å€™...',
+    submitText = 'ç«‹å³è¿›å…¥',
     isMobileRequest = false,
     isMobilePhone = false,
-    askBrowserAlert = 'ÇëÔÚÊÖ»úÉÏÊ¹ÓÃä¯ÀÀÆ÷´ò¿ª±¾Ò³Ãæ£¬»òÕßÉ¨ÃèÏÂÃæµÄ¶şÎ¬Âë£¬¼´¿É°²×°',
-    forIosAlert = 'ÄúµÄÊÖ»úÊÇAndroidÏµÍ³£¬ÎŞ·¨°²×°iOSÓ¦ÓÃ';
-    forAndroidAlert = 'ÄúµÄÊÖ»úÊÇiOSÏµÍ³£¬ÎŞ·¨°²×°AndroidÓ¦ÓÃ';
+    askBrowserAlert = 'è¯·åœ¨æ‰‹æœºä¸Šä½¿ç”¨æµè§ˆå™¨æ‰“å¼€æœ¬é¡µé¢ï¼Œæˆ–è€…æ‰«æä¸‹é¢çš„äºŒç»´ç ï¼Œå³å¯å®‰è£…',
+    forIosAlert = 'æ‚¨çš„æ‰‹æœºæ˜¯Androidç³»ç»Ÿï¼Œæ— æ³•å®‰è£…iOSåº”ç”¨';
+    forAndroidAlert = 'æ‚¨çš„æ‰‹æœºæ˜¯iOSç³»ç»Ÿï¼Œæ— æ³•å®‰è£…Androidåº”ç”¨';
     isWechatRequest = false,
     isQQRequest = false,
     isUCRequest = false,
@@ -248,45 +248,45 @@ var aType = 'android',
     needInstallInOutBrowser = false,
     remindOpenBrowserText = '',
     browseType = 'other',
-    appInstallPasswordAlert = 'ÇëÊäÈëÃÜÂë',
+    appInstallPasswordAlert = 'è¯·è¾“å…¥å¯†ç ',
     appStoreUrl = '',
-    reminderWechatDownloadContent = 'Çëµã»÷Î¢ĞÅÓÒÉÏ½Ç°´Å¥£¬È»ºóÔÚµ¯³öµÄ²Ëµ¥ÖĞ£¬µã»÷ÔÚä¯ÀÀÆ÷ÖĞ´ò¿ª£¬¼´¿ÉÏÂÔØ',
-    reminderUCDownloadContent = 'Äúµ±Ç°Ê¹ÓÃµÄÊÇ UC ä¯ÀÀÆ÷£¬¸Ãä¯ÀÀÆ÷²»Ö§³Ö°²×°App¡£ÇëÔÚä¯ÀÀÆ÷ÖĞ´ò¿ª£¬¼´¿ÉÏÂÔØ',
-    reminderWeiboDownloadContent = 'Çëµã»÷Î¢²©ÓÒÉÏ½Ç°´Å¥£¬È»ºóÔÚµ¯³öµÄ²Ëµ¥ÖĞ£¬µã»÷ÔÚä¯ÀÀÆ÷ÖĞ´ò¿ª£¬¼´¿ÉÏÂÔØ',
-    reminderQQDownloadContent = 'Çëµã»÷QQÓÒÉÏ½Ç°´Å¥£¬È»ºóÔÚµ¯³öµÄ²Ëµ¥ÖĞ£¬µã»÷ÔÚä¯ÀÀÆ÷ÖĞ´ò¿ª£¬¼´¿ÉÏÂÔØ',
+    reminderWechatDownloadContent = 'è¯·ç‚¹å‡»å¾®ä¿¡å³ä¸Šè§’æŒ‰é’®ï¼Œç„¶ååœ¨å¼¹å‡ºçš„èœå•ä¸­ï¼Œç‚¹å‡»åœ¨æµè§ˆå™¨ä¸­æ‰“å¼€ï¼Œå³å¯ä¸‹è½½',
+    reminderUCDownloadContent = 'æ‚¨å½“å‰ä½¿ç”¨çš„æ˜¯ UC æµè§ˆå™¨ï¼Œè¯¥æµè§ˆå™¨ä¸æ”¯æŒå®‰è£…Appã€‚è¯·åœ¨æµè§ˆå™¨ä¸­æ‰“å¼€ï¼Œå³å¯ä¸‹è½½',
+    reminderWeiboDownloadContent = 'è¯·ç‚¹å‡»å¾®åšå³ä¸Šè§’æŒ‰é’®ï¼Œç„¶ååœ¨å¼¹å‡ºçš„èœå•ä¸­ï¼Œç‚¹å‡»åœ¨æµè§ˆå™¨ä¸­æ‰“å¼€ï¼Œå³å¯ä¸‹è½½',
+    reminderQQDownloadContent = 'è¯·ç‚¹å‡»QQå³ä¸Šè§’æŒ‰é’®ï¼Œç„¶ååœ¨å¼¹å‡ºçš„èœå•ä¸­ï¼Œç‚¹å‡»åœ¨æµè§ˆå™¨ä¸­æ‰“å¼€ï¼Œå³å¯ä¸‹è½½',
     downloadOnlyForCertification = 1,
     userIsCertification = true,
     isIOS = false,
-    unableDownload = 'Ó¦ÓÃÌá¹©ÕßÎ´½øĞĞÊµÃûÈÏÖ¤£¬ÎŞ·¨ÏÂÔØ',
-    reportFileDeleteBtn = 'É¾³ı',
+    unableDownload = 'åº”ç”¨æä¾›è€…æœªè¿›è¡Œå®åè®¤è¯ï¼Œæ— æ³•ä¸‹è½½',
+    reportFileDeleteBtn = 'åˆ é™¤',
     downloadPayMoney = '',
-    deleteFileConfirm = 'È·¶¨ÒªÉ¾³ıÎÄ¼ş',
+    deleteFileConfirm = 'ç¡®å®šè¦åˆ é™¤æ–‡ä»¶',
     appTemplate = 'colorful',
-    loginFirst = 'ÇëÏÈµÇÂ¼',
-    appReportIsreason = 'ÇëÊäÈë¾Ù±¨Ô­Òò',
-    appReportMinreason = '¾Ù±¨Ô­Òò²»ÄÜÉÙÓÚ20¸ö×Ö·û',
-    appReportMaxreason = '¾Ù±¨Ô­Òò²»ÄÜ³¬¹ı500¸ö×Ö·û'
-    appReportIsemail = 'ÇëÊäÈëÕıÈ·µÄÓÊÏäµØÖ·',
+    loginFirst = 'è¯·å…ˆç™»å½•',
+    appReportIsreason = 'è¯·è¾“å…¥ä¸¾æŠ¥åŸå› ',
+    appReportMinreason = 'ä¸¾æŠ¥åŸå› ä¸èƒ½å°‘äº20ä¸ªå­—ç¬¦',
+    appReportMaxreason = 'ä¸¾æŠ¥åŸå› ä¸èƒ½è¶…è¿‡500ä¸ªå­—ç¬¦'
+    appReportIsemail = 'è¯·è¾“å…¥æ­£ç¡®çš„é‚®ç®±åœ°å€',
     shortcutUrl = 'mengju',
     mustDisplayAdSense = 0,
     showAppAd = 1,
     aKeyForAdSense = '79083847d931768d07e3dce68a17b62a',
-    appReportResult = '¸ĞĞ»ÄúµÄ¾Ù±¨£¬ÎÒÃÇ»á¾¡¿ìºËÊµÄúµÄ¾Ù±¨ÄÚÈİ²¢´¦Àí¡£\n\n×÷ÎªÒ»¸öµÚÈı·½ÄÚ²â·Ö·¢Æ½Ì¨£¬ÎÒÃÇÒ»Ö±ÖÂÁ¦ÓÚ´ò»÷Î¥¹æÓ¦ÓÃ£¬±£»¤ÖªÊ¶²úÈ¨¡£·Ç³£¸ĞĞ»ÄúµÄ¾Ù±¨£¬ÎÒÃÇ»áÔÚµÚÒ»Ê±¼ä°²ÅÅ×¨ÈË´¦ÀíÄú¾Ù±¨µÄÎÊÌâ£¬²¢ÔÚ´¦ÀíÖ®ºóÏòÄú·´À¡´¦Àí½á¹û¡£\n\n¸ĞĞ»Äú¶ÔÎÒÃÇµÄÖ§³Ö£¬Èç¹ûÓĞ¸ü¶àÎÊÌâ»¶Ó­²¦´òÎÒÃÇµÄÈÈÏßµç»°£º4008660210',
-    appFeedbackResult = '·´À¡³É¹¦',
+    appReportResult = 'æ„Ÿè°¢æ‚¨çš„ä¸¾æŠ¥ï¼Œæˆ‘ä»¬ä¼šå°½å¿«æ ¸å®æ‚¨çš„ä¸¾æŠ¥å†…å®¹å¹¶å¤„ç†ã€‚\n\nä½œä¸ºä¸€ä¸ªç¬¬ä¸‰æ–¹å†…æµ‹åˆ†å‘å¹³å°ï¼Œæˆ‘ä»¬ä¸€ç›´è‡´åŠ›äºæ‰“å‡»è¿è§„åº”ç”¨ï¼Œä¿æŠ¤çŸ¥è¯†äº§æƒã€‚éå¸¸æ„Ÿè°¢æ‚¨çš„ä¸¾æŠ¥ï¼Œæˆ‘ä»¬ä¼šåœ¨ç¬¬ä¸€æ—¶é—´å®‰æ’ä¸“äººå¤„ç†æ‚¨ä¸¾æŠ¥çš„é—®é¢˜ï¼Œå¹¶åœ¨å¤„ç†ä¹‹åå‘æ‚¨åé¦ˆå¤„ç†ç»“æœã€‚\n\næ„Ÿè°¢æ‚¨å¯¹æˆ‘ä»¬çš„æ”¯æŒï¼Œå¦‚æœæœ‰æ›´å¤šé—®é¢˜æ¬¢è¿æ‹¨æ‰“æˆ‘ä»¬çš„çƒ­çº¿ç”µè¯ï¼š4008660210',
+    appFeedbackResult = 'åé¦ˆæˆåŠŸ',
     isAutoToAppStore = false,
-    iphoneXTips = 'ÕıÔÚ°²×°£¬Çë´ÓÆÁÄ»µ×²¿±ßÔµÉÏ»¬·µ»Ø×ÀÃæ²é¿´',
-    testFlightTips = 'ÇëÔÚ TestFlight ÖĞ²é¿´',
+    iphoneXTips = 'æ­£åœ¨å®‰è£…ï¼Œè¯·ä»å±å¹•åº•éƒ¨è¾¹ç¼˜ä¸Šæ»‘è¿”å›æ¡Œé¢æŸ¥çœ‹',
+    testFlightTips = 'è¯·åœ¨ TestFlight ä¸­æŸ¥çœ‹',
     isTestFlight = '',
     isSignatureInhouse = false,
-    trustProvisionText = 'ĞÅÈÎ¿ª·¢Õß',
+    trustProvisionText = 'ä¿¡ä»»å¼€å‘è€…',
     isInstallStart = true,
-    installIsNotStart = '°²×°Î´¿ªÊ¼',
+    installIsNotStart = 'å®‰è£…æœªå¼€å§‹',
     isInstallEnd = false,
-    installIsEnd = '°²×°ÒÑ½áÊø',
+    installIsEnd = 'å®‰è£…å·²ç»“æŸ',
     isInstallValided = true,
-    appFeedbackRequired = 'ÇëÌîĞ´·´À¡ĞÅÏ¢',
-    appFeedbackEmailRequired = 'ÇëÌîĞ´ÄúµÄÓÊÏä»òÊÖ»úºÅ',
-    appFeedbackMaxLength = '·´À¡ĞÅÏ¢²»ÄÜ³¬¹ı2000¸ö×Ö·û',
+    appFeedbackRequired = 'è¯·å¡«å†™åé¦ˆä¿¡æ¯',
+    appFeedbackEmailRequired = 'è¯·å¡«å†™æ‚¨çš„é‚®ç®±æˆ–æ‰‹æœºå·',
+    appFeedbackMaxLength = 'åé¦ˆä¿¡æ¯ä¸èƒ½è¶…è¿‡2000ä¸ªå­—ç¬¦',
     isChrome = false;
 
     if (isTestFlight) {
@@ -309,7 +309,7 @@ $(document).ready(function() {
                                         isUCRequest = false;
                     needInstallInOutBrowser = false;
                     remindOpenBrowserText = '';
-                    reminderUCDownloadContent = 'Äúµ±Ç°Ê¹ÓÃµÄÊÇ UC ä¯ÀÀÆ÷£¬¸Ãä¯ÀÀÆ÷²»Ö§³Ö°²×°App¡£ÇëÔÚä¯ÀÀÆ÷ÖĞ´ò¿ª£¬¼´¿ÉÏÂÔØ';
+                    reminderUCDownloadContent = 'æ‚¨å½“å‰ä½¿ç”¨çš„æ˜¯ UC æµè§ˆå™¨ï¼Œè¯¥æµè§ˆå™¨ä¸æ”¯æŒå®‰è£…Appã€‚è¯·åœ¨æµè§ˆå™¨ä¸­æ‰“å¼€ï¼Œå³å¯ä¸‹è½½';
 
                     var html = '<div class="row view-alert"  style="display:none;z-index:99;width:100%;background:#343434;margin-left:0;margin-right:0;padding-top:30px;padding-bottom:30px;box-shadow:inset 0px -10px 16px rgba(22, 22, 23, 0.62);"><div class="col-md-12 text-left" style="padding-right:30px;padding-left:30px;"><p style="color:#7f7e7e;margin:0px;"></p></div></div>';
 
@@ -355,7 +355,7 @@ $(document).ready(function() {
 
     $("#lastest-li .close-tips").on('click', function() {
                                     $("#lastest-li").removeClass('hide').addClass('hide');
-                                    // Ê¹fashionÄ£°å±³¾°±äĞ¡
+                                    // ä½¿fashionæ¨¡æ¿èƒŒæ™¯å˜å°
                                     $("div.view-fashion-mobile-body .app-info-mobile.mobile-app-content").css('background-size', 'auto 330px');
                                     $(".view-fashion-app-info + .row.detail").css('margin-top', '20px');
                                     $("div.view-fashion-body").css('background-size', 'auto 170px');
@@ -372,26 +372,26 @@ $(document).ready(function() {
 wx.config({
     debug: false,
     appId: 'wx5c466490aaef0cc3',
-    timestamp: 1552314217,
-    nonceStr: '7047cc9ca938f494852ccd3f254a6f4f',
-    signature: 'c5085babe3d96cc62a0fece873049198b63c50ef',
+    timestamp: 1552314532,
+    nonceStr: '09cdec00bc184871109ec6291cf1447f',
+    signature: '5c389845a35bb193f413347058a5a1dc4517905a',
     jsApiList: ['onMenuShareTimeline', 'onMenuShareAppMessage', 'onMenuShareQQ']
 });
 
 wx.ready(function(){
     wx.onMenuShareAppMessage({
-        title: "ÃÈ¾Ô",
+        title: "èŒé©¹",
         desc: decodeURIComponent('%E7%89%88%E6%9C%AC%3A+1.0.1+%28build+1%29+%E5%A4%A7%E5%B0%8F%3A+14.7+MB'.replace(/\+/g, '%20')),
         link: 'https://www.pgyer.com/mengju',
         imgUrl: 'https://appicon.pgyer.com/image/view/app_icons/6a17c5edb6a76d3e84ba0aad604fe607/f300'
     });
     wx.onMenuShareTimeline({
-        title: 'ÃÈ¾Ô',
+        title: 'èŒé©¹',
         link: 'https://www.pgyer.com/mengju',
         imgUrl: 'https://appicon.pgyer.com/image/view/app_icons/6a17c5edb6a76d3e84ba0aad604fe607/f300'
     });
     wx.onMenuShareQQ({
-        title: 'ÃÈ¾Ô',
+        title: 'èŒé©¹',
         desc: decodeURIComponent('%E7%89%88%E6%9C%AC%3A+1.0.1+%28build+1%29+%E5%A4%A7%E5%B0%8F%3A+14.7+MB'.replace(/\+/g, '%20')),
         link: 'https://www.pgyer.com/mengju',
         imgUrl: 'https://appicon.pgyer.com/image/view/app_icons/6a17c5edb6a76d3e84ba0aad604fe607/f300'
@@ -404,7 +404,7 @@ wx.ready(function(){
 <script type="text/javascript" src="https://static.frontjs.com/dist/current/tracker.min.js" crossorigin="true"></script>
 
 <script>
-// ´¦ÀíÒ³ÃæÊı¾İÌ«ÉÙ£¬Ò³Ãæµ×²¿Áô°×µÄÎÊÌâ, ÊÖ»úÏÔÊ¾²»´¦Àí
+// å¤„ç†é¡µé¢æ•°æ®å¤ªå°‘ï¼Œé¡µé¢åº•éƒ¨ç•™ç™½çš„é—®é¢˜, æ‰‹æœºæ˜¾ç¤ºä¸å¤„ç†
 $(function() {
     var copyrightHeight = document.querySelector('.copyright').offsetHeight;
     var offsetTop = $(window).height() - $(".copyright").offset().top
@@ -428,7 +428,7 @@ $(function(){
 function checkIsUc() {
     var browser = navigator.userAgent;
 
-    // ÊÇ·ñÎªsafari
+    // æ˜¯å¦ä¸ºsafari
     if (/Safari/.test(browser) && !isChrome) {
 
         var ua = browser.toLowerCase();
@@ -443,7 +443,7 @@ function checkIsUc() {
 
         var osVer = ver.split('.')[0] + '.' + ver.split('.')[1]
 
-        // ÊÇ·ñÓĞapple
+        // æ˜¯å¦æœ‰apple
         if (typeof window.ApplePaySession === 'function') {
              return false;
         } else if ( osVer && osVer <= 11.2){
@@ -457,14 +457,14 @@ function checkIsUc() {
 }
 </script>
 <script>
-var telErrorTips = 'ÇëÕıÈ·ÌîĞ´ÄúµÄÊÖ»úºÅÂë';
-var codeRegain = 'ÖØĞÂ»ñÈ¡';
-var second = 'Ãë';
-var telHolder = 'ÇëÊäÈëÊÖ»úºÅÂë';
-var emailHolder = 'ÇëÊäÈëÓÊÏäµØÖ·';
-var pwdHolder = 'ÇëÊäÈëÃÜÂë';
-var telIncorrectTips = 'ÊäÈëµÄÊÖ»úºÅÂëÓë°ó¶¨ÊÖ»úºÅ²»Ïà·û';
-var emailErrorTips = 'ÇëÕıÈ·ÌîĞ´ÄúµÄÓÊÏä';
+var telErrorTips = 'è¯·æ­£ç¡®å¡«å†™æ‚¨çš„æ‰‹æœºå·ç ';
+var codeRegain = 'é‡æ–°è·å–';
+var second = 'ç§’';
+var telHolder = 'è¯·è¾“å…¥æ‰‹æœºå·ç ';
+var emailHolder = 'è¯·è¾“å…¥é‚®ç®±åœ°å€';
+var pwdHolder = 'è¯·è¾“å…¥å¯†ç ';
+var telIncorrectTips = 'è¾“å…¥çš„æ‰‹æœºå·ç ä¸ç»‘å®šæ‰‹æœºå·ä¸ç›¸ç¬¦';
+var emailErrorTips = 'è¯·æ­£ç¡®å¡«å†™æ‚¨çš„é‚®ç®±';
 var CNCALLINGCODE = '86';
 var mobileRegCN = /^1[3-9][0-9]{9}$/;
 var mobileRegEN = /[\d\-\s]+/;
