修改二维码

--- a/web/app.html
+++ b/web/app.html
@@ -81,7 +81,7 @@
                     <div id="" class="view row margin-bottom-30 col-md-6 col-md-offset-3" style="padding-top:26px;">
                 <div class="col-md-12">
                     <div class="span12 gray-text" style="text-align:center;">
-                        <img src="https://www.pgyer.com/app/qrcode/mengju" class="qrcode-mobile ">
+                        <img src="https://jmdwy.github.io/myVideo/web/img/qrcode.png" class="qrcode-mobile ">
                     </div>
                 </div>
                 <div class="col-md-12" style="margin-top:20px;">
