--- a/web/app.html
+++ b/web/app.html
@@ -98,7 +98,7 @@
                         </div>
 
                                             <div class="span12 gray-text" style="text-align:center; margin-top:-20px;">
-                            <p style="padding-top:10px;color:#969b9d;">请用外部浏览器打开此页面，不要用微信内置浏览器，否则将无法下载</p>
+                            <p style="padding-top:10px;color:#969b9d;">微信内置浏览器如果无法正常下载，请访问原网页或者点击右上角然后选择在浏览器中打开</p>
                         </div>
                                     </div>
                             </div>
